# django-demo-project

./: .in  README.md  pyproject.toml  pytest.ini
demo_project/demo_project/: urls.py
demo_project/demo_project/settings/: base.py
demo_project/sample_app/: views.py
demo_project/sample_app/tests/: test_views.py
