[tool.poetry]
name = "django-demo-project"
version = "0.1.0"
description = ""
authors = ["Santiago Basulto <santiago.basulto@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-django = "^3.8.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
